# AdventOfCode

./: .gitignore
2015/: day1.py  day2.py  day3.py  day4.py
2017/: day1.py  day1_test.py  day2_test.py  day5.py  day6.py  day7.py  day8.py  day9.py  day9_test.py
2017/day1/: day1_test.py
2017/day10/: KnotHash.py  KnotHash_test.py  MultipleRounds.py  MultipleRounds_test.py  main.py
2017/day11/: CMakeLists.txt  FileNotFoundException.hpp  FileReader.cpp  FileReader.hpp  HexGrid.cpp  HexGrid.hpp  UnknownDirectionException.hpp  main.cpp
2017/day11/test/: FileReaderTest.cpp  HexGridTest.cpp
2017/day12/: Graph.py  GraphGroupCounting_test.py  GraphParsing_test.py  GraphTestBase.py  GraphTraversing_test.py  Graph_test.py  conftest.py  main.py
2017/day13/: CMakeLists.txt  FileNotFoundException.hpp  FileReader.hpp  FirewallSolver.cpp  FirewallSolver.hpp  FirewallSolverBuilder.cpp  FirewallSolverBuilder.hpp  main.cpp
2017/day13/new/: main.py
2017/day13/test/: FirewallSolverTest.cpp  main_test.cpp
2017/day14/: main.py
2017/day15/: Generator.py  Generator_test.py  Judge.py  Judge_test.py  main.py
2017/day16/: dance_test.py  main.cpp  main.py
2017/day17/: main.cpp  main.py  spinlock_test.py
2017/day18/: main.py
2017/day19/: main.py
2017/day2/: day2.py
2017/day20/: analysis.py  main.py
2017/day21/: main.py
2017/day22/: main.py
2017/day3/: day3.py  day3_test.py
2017/day4/: day4.py  day4_new.py
2017/day7/: day7.py
2018/day25/: CMakeLists.txt  Clusters.hpp  FileLoader.hpp  Manhattan.cpp  Manhattan.hpp  Point.hpp  PointsParser.hpp  main.cpp
2018/day25/tests/: FileLoaderTest.cpp  ManhattanTest.cpp  ModuleTest.cpp  PointsParserTest.cpp  main_test.cpp  testFile.txt
